--- a/src/main/webapp/app/entities/user-app/user-app-update.component.html
+++ b/src/main/webapp/app/entities/user-app/user-app-update.component.html
@@ -7,7 +7,7 @@
                         <div class="row justify-content-md-center">
                             <div class="col-md-6">
                                 <div class="form-body">
-                                    <h4 class="form-section"><i class="ft-user"></i> Editar informacion</h4>
+                                    <h4 class="form-section"><i class="ft-user"></i> Editar información</h4>
                                     <jhi-alert-error></jhi-alert-error>
                                     <div class="form-group" hidden>
                                         <label for="id">Id</label>
@@ -33,7 +33,6 @@
                                             </small>
                                         </div>
                                     </div>
-
                                     <div class="form-group">
                                         <label for="name"><i class="ft-user"></i> Nombre</label>
                                         <input type="text" class="form-control" [(ngModel)]="userApp.name" id="name"
@@ -45,7 +44,6 @@
                                             </small>
                                         </div>
                                     </div>
-
                                     <div class="form-group">
                                         <label for="identification"><i class="ft-hash"></i> Número de
                                             identificación</label>
@@ -68,7 +66,6 @@
                                             </small>
                                         </div>
                                     </div>
-
                                     <div class="form-group">
                                         <label for="email"><i class="ft-at-sign"></i> Correo electronico</label>
                                         <input type="email" class="form-control" id="email" name="email"
@@ -90,27 +87,45 @@
                                             </small>
                                         </div>
                                     </div>
-
                                     <div class="form-group">
                                         <label for="address"><i class="ft-globe"></i> Dirección</label>
                                         <input type="text" class="form-control" [(ngModel)]="userApp.address"
                                                id="address" name="address" #address="ngModel" placeholder="Dirección">
                                     </div>
                                 </div>
+                                <div class="row">
+                                    <div class="col-auto">
+                                        <button type="button" id="cancel-save" class="btn btn-raised btn-warning mr-1"
+                                                (click)="previousState()">
+                                            <i class="ft-chevron-left"></i> Atrás
+                                        </button>
+                                    </div>
+                                    <div [ngbPopover]="popoverText"
+                                         triggers="mouseenter:mouseleave" popoverTitle="Formulario inválido."
+                                         *ngIf="updateForm.form.invalid || isSaving; else validRegisterBtn"
+                                         class="col-auto">
+                                        <button type="submit"
+                                                [disabled]="true"
+                                                class="btn btn-raised btn-primary">
+                                            <i class="ft ft-check"></i> Guardar
+                                        </button>
+                                    </div>
+                                    <ng-template #popoverText>
+                                        <small class="display-block">Por favor, asegúrese de que todos los campos estén completos.
+                                        </small>
+                                    </ng-template>
+                                    <ng-template #validRegisterBtn>
+                                        <div class="col-auto">
+                                            <button type="submit" id="save-entity"
+                                                    class="btn btn-raised btn-primary">
+                                                <i class="ft ft-check"></i> Guardar
+                                            </button>
+                                        </div>
+                                    </ng-template>
+                                </div>
                             </div>
                         </div>
-
-                        <div class="form-actions center">
-                            <button type="button" class="btn btn-raised btn-warning mr-1" (click)="previousState()">
-                                <i class="ft-x"></i> Atras
-                            </button>
-                            <button type="submit" [disabled]="updateForm.form.invalid || isSaving "
-                                    class="btn btn-raised btn-primary">
-                                <i class="ft-check"></i> Confirmar
-                            </button>
-                        </div>
                     </form>
-
                 </div>
             </div>
         </div>
