--- a/src/main/webapp/app/entities/focus-group/focus-group-form.component.html
+++ b/src/main/webapp/app/entities/focus-group/focus-group-form.component.html
@@ -82,7 +82,7 @@
                         <small class="display-inline-block form-text text-muted danger" *ngIf="!floatGrade.valid && (floatGrade.dirty ||
                                  floatGrade.touched)">Este campo es requerido.
                         </small>
-                        <small class="display-inline-block form-text text-muted danger" *ngIf="!validatePassingGrade()">¡La nota tiene que ser un número positivo mayor que 0 y menor o igual a 100!
+                        <small class="display-inline-block form-text text-muted danger" *ngIf="!validatePassingGrade()">La nota tiene que ser un número positivo mayor que 0 y menor o igual a 100
                         </small>
                     </div>
                 </div>
