--- a/src/main/webapp/app/entities/participant/participant-update.component.html
+++ b/src/main/webapp/app/entities/participant/participant-update.component.html
@@ -21,7 +21,7 @@
                                             <input _ngcontent-c5="" class="form-control border-primary"
                                                    id="field_birthdate" name="birthdate" type="text" ngbDatepicker
                                                    #birthdateDp="ngbDatepicker" [(ngModel)]="participant.birthdate"
-                                                   required>
+                                                   disabled>
                                             <span class="input-group-append">
                                                 <button type="button" class="btn btn-secondary"
                                                         (click)="birthdateDp.toggle()">
