--- a/src/main/webapp/app/entities/focus-group/focus-group-form.component.html
+++ b/src/main/webapp/app/entities/focus-group/focus-group-form.component.html
@@ -100,7 +100,7 @@
                                  floatGrade.touched)">Este campo es requerido.
                         </small>
                         <small class="display-inline-block form-text text-muted danger" *ngIf="!validatePassingGrade()">
-                            La nota tiene que ser un número positivo mayor que 0 y menor o igual a 100
+                            La nota tiene que ser un número positivo mayor que 0 y menor o igual a 100.
                         </small>
                     </div>
                 </div>
