--- a/src/main/webapp/app/entities/test-question/test-question.component.html
+++ b/src/main/webapp/app/entities/test-question/test-question.component.html
@@ -44,7 +44,7 @@
                             <span class="d-none d-md-inline">Edit</span>
                         </button>
                         <button type="submit"
-                                [routerLink]="['/', 'test-question', { outlets: { popup: testQuestion.id + '/delete'} }]"
+                                [routerLink]="['/test-question', { outlets: { popup: testQuestion.id + '/delete'} }]"
                                 replaceUrl="true"
                                 queryParamsHandling="merge"
                                 class="btn btn-danger btn-sm">
