fixed test question answers delete

--- a/src/main/webapp/app/entities/aptitude-test/aptitude-test-update.component.html
+++ b/src/main/webapp/app/entities/aptitude-test/aptitude-test-update.component.html
@@ -17,7 +17,7 @@
                     <div class="row">
                         <div id="testForm" class="col-md-6 col-sm-6 col-lg-6">
                             <div class="form-group">
-                                <label class="form-control-label" for="field_name">Pregunta</label>
+                                <label class="form-control-label" for="field_question">Pregunta</label>
                                 <input [attr.disabled]="newQuestion.answers.length ? '' : null"
                                        type="text" class="form-control" name="question"
                                        id="field_question" [class.ng-invalid]="repeatedQuestion()"
