--- a/src/main/webapp/app/entities/user-app/user-app-update.component.html
+++ b/src/main/webapp/app/entities/user-app/user-app-update.component.html
@@ -18,7 +18,7 @@
                                         <label for="login"><i class="ft-edit-3"></i> Nombre de usuario</label>
                                         <input type="text" class="form-control" [(ngModel)]="user.login"
                                                id="login" name="login" #login="ngModel" placeholder="Nombre de usuario"
-                                               required minlength="1" maxlength="50">
+                                               required minlength="1" maxlength="50" disabled>
                                         <div *ngIf="login.dirty && login.invalid">
                                             <small class="form-text text-danger" *ngIf="login.errors.required">
                                                 Este campo es requerido.
