--- a/src/main/webapp/app/dashboard-institution/dashboard-institution.component.html
+++ b/src/main/webapp/app/dashboard-institution/dashboard-institution.component.html
@@ -21,15 +21,15 @@
         </div>
     </div>
     <div class="col-xl-3 col-lg-6 col-md-6 col-12">
-        <div class="card gradient-ibiza-sunset">
+        <div class="card gradient-ibiza-sunset white">
             <div class="card-body">
                 <div class="card-block pt-2 pb-0">
                     <div class="media">
-                        <div class="media-body white text-left">
+                        <div class="media-body  text-left">
                             <h3 class="font-large-1 mb-0">{{institution.description}}</h3>
-                            <span>Descripción</span>
                         </div>
                         <div class="media-right white text-right">
+                            <span>Descripción</span>
                             <i class="icon-bulb font-large-1"></i>
                         </div>
                     </div>
