--- a/src/main/webapp/app/layouts/navbar/navbar.component.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.component.html
@@ -35,14 +35,14 @@
                                 <a class="dropdown-item" routerLink="user-app" routerLinkActive="active"
                                    [routerLinkActiveOptions]="{ exact: true }" (click)="collapseNavbar()">
                                     <fa-icon icon="asterisk" fixedWidth="true"></fa-icon>
-                                    <span>Usuario</span>
+                                    <span>Usuarios</span>
                                 </a>
                             </li>
                             <li id="participantPermissions" hidden>
                                 <a class="dropdown-item" routerLink="participant" routerLinkActive="active"
                                    [routerLinkActiveOptions]="{ exact: true }" (click)="collapseNavbar()">
                                     <fa-icon icon="asterisk" fixedWidth="true"></fa-icon>
-                                    <span>Participante</span>
+                                    <span>Participantes</span>
                                 </a>
                             </li>
                             <li id="participantPPermissions" hidden *ngIf="participant">
@@ -70,21 +70,21 @@
                                 <a class="dropdown-item" routerLink="institution" routerLinkActive="active"
                                    [routerLinkActiveOptions]="{ exact: true }" (click)="collapseNavbar()">
                                     <fa-icon icon="asterisk" fixedWidth="true"></fa-icon>
-                                    <span>Institución</span>
+                                    <span>Instituciones</span>
                                 </a>
                             </li>
                             <li id="incentivePermissions" hidden>
                                 <a class="dropdown-item" routerLink="incentive" routerLinkActive="active"
                                    [routerLinkActiveOptions]="{ exact: true }" (click)="collapseNavbar()">
                                     <fa-icon icon="asterisk" fixedWidth="true"></fa-icon>
-                                    <span>Incentivo</span>
+                                    <span>Incentivos</span>
                                 </a>
                             </li>
                             <li id="aptitudeTestsPermissions" hidden>
                                 <a class="dropdown-item" routerLink="aptitude-test" routerLinkActive="active"
                                    [routerLinkActiveOptions]="{ exact: true }" (click)="collapseNavbar()">
                                     <fa-icon icon="asterisk" fixedWidth="true"></fa-icon>
-                                    <span>Prueba de aptitud (PA)</span>
+                                    <span>Pruebas de aptitud (PA)</span>
                                 </a>
                             </li>
                             <li id="testResultPermissions" hidden>
@@ -112,21 +112,21 @@
                                 <a class="dropdown-item" routerLink="focus-group" routerLinkActive="active"
                                    [routerLinkActiveOptions]="{ exact: true }" (click)="collapseNavbar()">
                                     <fa-icon icon="asterisk" fixedWidth="true"></fa-icon>
-                                    <span>Grupo de enfoque</span>
+                                    <span>Grupos de enfoque</span>
                                 </a>
                             </li>
                             <li id="meetingPermissions" hidden>
                                 <a class="dropdown-item" routerLink="meeting" routerLinkActive="active"
                                    [routerLinkActiveOptions]="{ exact: true }" (click)="collapseNavbar()">
                                     <fa-icon icon="asterisk" fixedWidth="true"></fa-icon>
-                                    <span>Reunión</span>
+                                    <span>Reuniones</span>
                                 </a>
                             </li>
                             <li id="membershipPermissions" hidden>
                                 <a class="dropdown-item" routerLink="membership" routerLinkActive="active"
                                    [routerLinkActiveOptions]="{ exact: true }" (click)="collapseNavbar()">
                                     <fa-icon icon="asterisk" fixedWidth="true"></fa-icon>
-                                    <span>Membresía</span>
+                                    <span>Membresías</span>
                                 </a>
                             </li>
                             <li id="paymentMethodPermissions" hidden>
@@ -147,7 +147,7 @@
                                 <a class="dropdown-item" routerLink="category" routerLinkActive="active"
                                    [routerLinkActiveOptions]="{ exact: true }" (click)="collapseNavbar()">
                                     <fa-icon icon="asterisk" fixedWidth="true"></fa-icon>
-                                    <span>Categoría</span>
+                                    <span>Categorías</span>
                                 </a>
                             </li>
                             <li id="balancePermissions" hidden>
@@ -217,122 +217,122 @@
 
 
         <!--<div class="navbar-collapse collapse" id="navbarReasponsive" [ngbCollapse]="isNavbarCollapsed"-->
-             <!--[ngSwitch]="isAuthenticated()">-->
-            <!--<ul class="navbar-nav ml-auto">-->
+        <!--[ngSwitch]="isAuthenticated()">-->
+        <!--<ul class="navbar-nav ml-auto">-->
 
-                <!--&lt;!&ndash; jhipster-needle-add-element-to-menu - JHipster will add new menu items here &ndash;&gt;-->
-                <!--<li *jhiHasAnyAuthority="'ROLE_ADMIN'" ngbDropdown class="nav-item dropdown pointer"-->
-                    <!--routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">-->
-                    <!--<a class="nav-link dropdown-toggle" ngbDropdownToggle href="javascript:void(0);" id="admin-menu">-->
-                    <!--<span>-->
-                        <!--<fa-icon icon="user-plus"></fa-icon>-->
-                        <!--<span>Administration</span>-->
-                    <!--</span>-->
-                    <!--</a>-->
-                    <!--<ul class="dropdown-menu" ngbDropdownMenu aria-labelledby="admin-menu">-->
-                        <!--<li>-->
-                            <!--<a class="dropdown-item" routerLink="admin/user-management" routerLinkActive="active"-->
-                               <!--(click)="collapseNavbar()">-->
-                                <!--<fa-icon icon="user" fixedWidth="true"></fa-icon>-->
-                                <!--<span>User management</span>-->
-                            <!--</a>-->
-                        <!--</li>-->
-                        <!--<li>-->
-                            <!--<a class="dropdown-item" routerLink="admin/jhi-metrics" routerLinkActive="active"-->
-                               <!--(click)="collapseNavbar()">-->
-                                <!--<fa-icon icon="tachometer-alt" fixedWidth="true"></fa-icon>-->
-                                <!--<span>Metrics</span>-->
-                            <!--</a>-->
-                        <!--</li>-->
-                        <!--<li>-->
-                            <!--<a class="dropdown-item" routerLink="admin/jhi-health" routerLinkActive="active"-->
-                               <!--(click)="collapseNavbar()">-->
-                                <!--<fa-icon icon="heart" fixedWidth="true"></fa-icon>-->
-                                <!--<span>Health</span>-->
-                            <!--</a>-->
-                        <!--</li>-->
-                        <!--<li>-->
-                            <!--<a class="dropdown-item" routerLink="admin/jhi-configuration" routerLinkActive="active"-->
-                               <!--(click)="collapseNavbar()">-->
-                                <!--<fa-icon icon="list" fixedWidth="true"></fa-icon>-->
-                                <!--<span>Configuration</span>-->
-                            <!--</a>-->
-                        <!--</li>-->
-                        <!--<li>-->
-                            <!--<a class="dropdown-item" routerLink="admin/audits" routerLinkActive="active"-->
-                               <!--(click)="collapseNavbar()">-->
-                                <!--<fa-icon icon="bell" fixedWidth="true"></fa-icon>-->
-                                <!--<span>Audits</span>-->
-                            <!--</a>-->
-                        <!--</li>-->
-                        <!--<li>-->
-                            <!--<a class="dropdown-item" routerLink="admin/logs" routerLinkActive="active"-->
-                               <!--(click)="collapseNavbar()">-->
-                                <!--<fa-icon icon="tasks" fixedWidth="true"></fa-icon>-->
-                                <!--<span>Logs</span>-->
-                            <!--</a>-->
-                        <!--</li>-->
-                        <!--<li *ngIf="swaggerEnabled">-->
-                            <!--<a class="dropdown-item" routerLink="admin/docs" routerLinkActive="active"-->
-                               <!--(click)="collapseNavbar()">-->
-                                <!--<fa-icon icon="book" fixedWidth="true"></fa-icon>-->
-                                <!--<span>API</span>-->
-                            <!--</a>-->
-                        <!--</li>-->
-                        <!--&lt;!&ndash; jhipster-needle-add-element-to-admin-menu - JHipster will add entities to the admin menu here &ndash;&gt;-->
-                    <!--</ul>-->
-                <!--</li>-->
+        <!--&lt;!&ndash; jhipster-needle-add-element-to-menu - JHipster will add new menu items here &ndash;&gt;-->
+        <!--<li *jhiHasAnyAuthority="'ROLE_ADMIN'" ngbDropdown class="nav-item dropdown pointer"-->
+        <!--routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">-->
+        <!--<a class="nav-link dropdown-toggle" ngbDropdownToggle href="javascript:void(0);" id="admin-menu">-->
+        <!--<span>-->
+        <!--<fa-icon icon="user-plus"></fa-icon>-->
+        <!--<span>Administration</span>-->
+        <!--</span>-->
+        <!--</a>-->
+        <!--<ul class="dropdown-menu" ngbDropdownMenu aria-labelledby="admin-menu">-->
+        <!--<li>-->
+        <!--<a class="dropdown-item" routerLink="admin/user-management" routerLinkActive="active"-->
+        <!--(click)="collapseNavbar()">-->
+        <!--<fa-icon icon="user" fixedWidth="true"></fa-icon>-->
+        <!--<span>User management</span>-->
+        <!--</a>-->
+        <!--</li>-->
+        <!--<li>-->
+        <!--<a class="dropdown-item" routerLink="admin/jhi-metrics" routerLinkActive="active"-->
+        <!--(click)="collapseNavbar()">-->
+        <!--<fa-icon icon="tachometer-alt" fixedWidth="true"></fa-icon>-->
+        <!--<span>Metrics</span>-->
+        <!--</a>-->
+        <!--</li>-->
+        <!--<li>-->
+        <!--<a class="dropdown-item" routerLink="admin/jhi-health" routerLinkActive="active"-->
+        <!--(click)="collapseNavbar()">-->
+        <!--<fa-icon icon="heart" fixedWidth="true"></fa-icon>-->
+        <!--<span>Health</span>-->
+        <!--</a>-->
+        <!--</li>-->
+        <!--<li>-->
+        <!--<a class="dropdown-item" routerLink="admin/jhi-configuration" routerLinkActive="active"-->
+        <!--(click)="collapseNavbar()">-->
+        <!--<fa-icon icon="list" fixedWidth="true"></fa-icon>-->
+        <!--<span>Configuration</span>-->
+        <!--</a>-->
+        <!--</li>-->
+        <!--<li>-->
+        <!--<a class="dropdown-item" routerLink="admin/audits" routerLinkActive="active"-->
+        <!--(click)="collapseNavbar()">-->
+        <!--<fa-icon icon="bell" fixedWidth="true"></fa-icon>-->
+        <!--<span>Audits</span>-->
+        <!--</a>-->
+        <!--</li>-->
+        <!--<li>-->
+        <!--<a class="dropdown-item" routerLink="admin/logs" routerLinkActive="active"-->
+        <!--(click)="collapseNavbar()">-->
+        <!--<fa-icon icon="tasks" fixedWidth="true"></fa-icon>-->
+        <!--<span>Logs</span>-->
+        <!--</a>-->
+        <!--</li>-->
+        <!--<li *ngIf="swaggerEnabled">-->
+        <!--<a class="dropdown-item" routerLink="admin/docs" routerLinkActive="active"-->
+        <!--(click)="collapseNavbar()">-->
+        <!--<fa-icon icon="book" fixedWidth="true"></fa-icon>-->
+        <!--<span>API</span>-->
+        <!--</a>-->
+        <!--</li>-->
+        <!--&lt;!&ndash; jhipster-needle-add-element-to-admin-menu - JHipster will add entities to the admin menu here &ndash;&gt;-->
+        <!--</ul>-->
+        <!--</li>-->
 
-                <!--<li ngbDropdown class="nav-item dropdown pointer" placement="bottom-right" routerLinkActive="active"-->
-                    <!--[routerLinkActiveOptions]="{exact: true}">-->
-                    <!--<a class="nav-link dropdown-toggle" ngbDropdownToggle href="javascript:void(0);">-->
-                  <!--<span *ngIf="!getImageUrl()">-->
-                    <!--<fa-icon icon="user"></fa-icon>-->
-                    <!--<span>-->
-                      <!--Account-->
-                    <!--</span>-->
-                  <!--</span>-->
-                        <!--<span *ngIf="getImageUrl()">-->
-                      <!--<img [src]="getImageUrl()" class="profile-image rounded-circle" alt="Avatar">-->
-                  <!--</span>-->
-                    <!--</a>-->
-                    <!--<ul class="dropdown-menu" ngbDropdownMenu aria-labelledby="account-menu">-->
-                        <!--<li *ngSwitchCase="true">-->
-                            <!--<a class="dropdown-item" routerLink="settings" routerLinkActive="active"-->
-                               <!--(click)="collapseNavbar()">-->
-                                <!--<fa-icon icon="wrench" fixedWidth="true"></fa-icon>-->
-                                <!--<span>Settings</span>-->
-                            <!--</a>-->
-                        <!--</li>-->
-                        <!--<li *ngSwitchCase="true">-->
-                            <!--<a class="dropdown-item" routerLink="password" routerLinkActive="active"-->
-                               <!--(click)="collapseNavbar()">-->
-                                <!--<fa-icon icon="clock" fixedWidth="true"></fa-icon>-->
-                                <!--<span>Password</span>-->
-                            <!--</a>-->
-                        <!--</li>-->
-                        <!--<li *ngSwitchCase="true">-->
-                            <!--<a class="dropdown-item" (click)="logout()" id="logout">-->
-                                <!--<fa-icon icon="sign-out-alt" fixedWidth="true"></fa-icon>-->
-                                <!--<span>Sign out</span>-->
-                            <!--</a>-->
-                        <!--</li>-->
-                        <!--<li *ngSwitchCase="false">-->
-                            <!--<a class="dropdown-item" (click)="login()" id="login">-->
-                                <!--<fa-icon icon="sign-in-alt" fixedWidth="true"></fa-icon>-->
-                                <!--<span>Sign in</span>-->
-                            <!--</a>-->
-                        <!--</li>-->
-                        <!--<li *ngSwitchCase="false">-->
-                            <!--<a class="dropdown-item" routerLink="register" routerLinkActive="active"-->
-                               <!--(click)="collapseNavbar()">-->
-                                <!--<fa-icon icon="user-plus" fixedWidth="true"></fa-icon>-->
-                                <!--<span>Register</span>-->
-                            <!--</a>-->
-                        <!--</li>-->
-                    <!--</ul>-->
-                <!--</li>-->
-            <!--</ul>-->
+        <!--<li ngbDropdown class="nav-item dropdown pointer" placement="bottom-right" routerLinkActive="active"-->
+        <!--[routerLinkActiveOptions]="{exact: true}">-->
+        <!--<a class="nav-link dropdown-toggle" ngbDropdownToggle href="javascript:void(0);">-->
+        <!--<span *ngIf="!getImageUrl()">-->
+        <!--<fa-icon icon="user"></fa-icon>-->
+        <!--<span>-->
+        <!--Account-->
+        <!--</span>-->
+        <!--</span>-->
+        <!--<span *ngIf="getImageUrl()">-->
+        <!--<img [src]="getImageUrl()" class="profile-image rounded-circle" alt="Avatar">-->
+        <!--</span>-->
+        <!--</a>-->
+        <!--<ul class="dropdown-menu" ngbDropdownMenu aria-labelledby="account-menu">-->
+        <!--<li *ngSwitchCase="true">-->
+        <!--<a class="dropdown-item" routerLink="settings" routerLinkActive="active"-->
+        <!--(click)="collapseNavbar()">-->
+        <!--<fa-icon icon="wrench" fixedWidth="true"></fa-icon>-->
+        <!--<span>Settings</span>-->
+        <!--</a>-->
+        <!--</li>-->
+        <!--<li *ngSwitchCase="true">-->
+        <!--<a class="dropdown-item" routerLink="password" routerLinkActive="active"-->
+        <!--(click)="collapseNavbar()">-->
+        <!--<fa-icon icon="clock" fixedWidth="true"></fa-icon>-->
+        <!--<span>Password</span>-->
+        <!--</a>-->
+        <!--</li>-->
+        <!--<li *ngSwitchCase="true">-->
+        <!--<a class="dropdown-item" (click)="logout()" id="logout">-->
+        <!--<fa-icon icon="sign-out-alt" fixedWidth="true"></fa-icon>-->
+        <!--<span>Sign out</span>-->
+        <!--</a>-->
+        <!--</li>-->
+        <!--<li *ngSwitchCase="false">-->
+        <!--<a class="dropdown-item" (click)="login()" id="login">-->
+        <!--<fa-icon icon="sign-in-alt" fixedWidth="true"></fa-icon>-->
+        <!--<span>Sign in</span>-->
+        <!--</a>-->
+        <!--</li>-->
+        <!--<li *ngSwitchCase="false">-->
+        <!--<a class="dropdown-item" routerLink="register" routerLinkActive="active"-->
+        <!--(click)="collapseNavbar()">-->
+        <!--<fa-icon icon="user-plus" fixedWidth="true"></fa-icon>-->
+        <!--<span>Register</span>-->
+        <!--</a>-->
+        <!--</li>-->
+        <!--</ul>-->
+        <!--</li>-->
+        <!--</ul>-->
         <!--</div>-->
 
     </div>
