--- a/src/main/webapp/app/entities/aptitude-test/aptitude-test-update.component.html
+++ b/src/main/webapp/app/entities/aptitude-test/aptitude-test-update.component.html
@@ -109,12 +109,12 @@
                         <div *ngIf="question.question !== 'delete'">
                             <div class="card-header">
                                 <div class="row">
-                                    <div class="col-sm-10 col-md-10 col-11">
+                                    <div class="col-sm-10 col-md-10 col-10 col-lg-11">
                                         <span class="text-bold-500 primary">¿{{question.question}}?</span>
                                     </div>
-                                    <div *ngIf="question.id; else newQuestion" class="col-sm-2 col-md-2 col-1 col-lg-1">
+                                    <div *ngIf="question.id; else newQuestion" class=" float-right col-sm-2 col-md-2 col-2 col-lg-1">
                                         <a [routerLink]="['/test-question', question.id, 'edit' ]"><i
-                                            class="ft-edit-2 font-medium-3"></i></a>
+                                            class=" ft-edit-2 font-medium-3"></i></a>
                                         <a *ngIf="validQuestionsLength(); else invalidDelBtn"
                                            (click)="removeQuestion(question)"><i
                                             class="ft-x font-medium-3 danger"></i></a>
