--- a/src/main/webapp/app/account/register/register.component.html
+++ b/src/main/webapp/app/account/register/register.component.html
@@ -2,8 +2,8 @@
     <div _ngcontent-c24="" class="col-md-12">
         <div _ngcontent-c24="" class="card">
             <div _ngcontent-c24="" class="card-header">
-                <h4 _ngcontent-c24="" class="card-title" id="horz-layout-colored-controls">Usuario</h4>
-                <p _ngcontent-c24="" class="mb-0">¡Bienvenido a <strong style="color: #F5B23E;">Palaver!</strong>
+                <h4 _ngcontent-c24="" class="card-title" id="horz-layout-colored-controls" *ngIf="!success">Usuario</h4>
+                <p _ngcontent-c24="" class="mb-0" *ngIf="!success">¡Bienvenido a <strong style="color: #F5B23E;">Palaver!</strong>
                     Necesitamos que nos brindes cierta información para poder hacer tu experiencia la mejor.
                     Ya seas una institución, con el deseo de crear y llevar a cabo grupos de enfoque, o un participante,
                     que desea compartir su opinión, especifícalo al final del formulario.
