Bug fix avances

--- a/src/main/webapp/app/user-home/user-home.component.html
+++ b/src/main/webapp/app/user-home/user-home.component.html
@@ -36,10 +36,10 @@
             <!--</form>-->
         </div>
 
-        <div _ngcontent-c25="" class="card card-inverse bg-primary text-center gradient-blue-grey-blue mr-3 ml-3" style="height: 312.703px;" *ngIf="result.length === 0">
+        <div _ngcontent-c25="" class="card card-inverse text-center mr-3 ml-3" style="height: 312.703px;" *ngIf="result.length === 0">
             <div _ngcontent-c25="" class="card-body">
                 <div _ngcontent-c25="" class="card-block pt-3">
-                    <img _ngcontent-c25="" alt="element 01" src="https://res.cloudinary.com/utilisimo/image/upload/v1553481262/noResult_hhjbda.png" class="width-95-per mt-4">
+                    <img _ngcontent-c25="" alt="element 01" src="https://res.cloudinary.com/utilisimo/image/upload/v1553481262/noResult_hhjbda.png" class="width-40-per mt-4">
                 </div>
             </div>
         </div>
