--- a/src/main/webapp/app/entities/balance-account/balance-account.component.html
+++ b/src/main/webapp/app/entities/balance-account/balance-account.component.html
@@ -10,7 +10,7 @@
                 <div class="px-3 py-3">
                     <div class="media">
                         <div class="media-body white text-left">
-                            <h3>₡{{actualBalance.balance}}.00</h3>
+                            <h3>₡{{formatedBalance}}</h3>
                             <span>Saldo actual</span>
                         </div>
                     </div>
