--- a/src/main/webapp/app/layouts/navbar/navbar.component.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.component.html
@@ -74,7 +74,7 @@
                                 </a>
                             </li>
                             <li id="incentivePermissions" hidden>
-                                <a class="dropdown-item" routerLink="incentive" routerLinkActive="active"
+                                <a *ngIf="membershipId == 2" class="dropdown-item" routerLink="incentive" routerLinkActive="active"
                                    [routerLinkActiveOptions]="{ exact: true }" (click)="collapseNavbar()">
                                     <fa-icon icon="asterisk" fixedWidth="true"></fa-icon>
                                     <span>Incentivos</span>
